samples/_failures_safe/1761127214_e97d5d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1028023c.c: In function ‘print_compression_info’:
./samples/SAFE/__tmp_1028023c.c:138:20: error: missing terminating " character
  138 |             printf("  Block
      |                    ^~~~~~~~
./samples/SAFE/__tmp_1028023c.c:138:13: error: expected expression at end of input
  138 |             printf("  Block
      |             ^~~~~~
./samples/SAFE/__tmp_1028023c.c:138:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1028023c.c:138:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1028023c.c:138:13: error: expected declaration or statement at end of input
